# openvino.genai

./: build.sh  run_sample.sh
.github/: enable_custom_vit_cb_instructions.md
samples/: CMakeLists.txt
samples/cpp/custom_vit_cb/: CMakeLists.txt  README.md  build.sh  custom_vit_cb.cpp
samples/cpp/visual_language_chat/: CMakeLists.txt  test_cdpruner.cpp  visual_language_chat.cpp
src/cpp/include/openvino/genai/: continuous_batching_pipeline.hpp  generation_config.hpp
src/cpp/src/: logger.cpp  logger.hpp  sequence_group.hpp  utils.cpp
src/cpp/src/continuous_batching/: model_runner.hpp  pipeline.cpp  pipeline_base.cpp  pipeline_base.hpp  pipeline_impl.cpp
src/cpp/src/visual_language/: IMPLEMENTATION_SUMMARY.md  README.md  cdpruner.cpp  cdpruner.hpp  continuous_batching_adapter.hpp  inputs_embedder.cpp  inputs_embedder.hpp  pipeline.cpp  pipeline_base.hpp  vision_encoder.cpp  vision_encoder.hpp  vision_token_pruning_processor.cpp  vision_token_pruning_processor.hpp  vlm_config.cpp  vlm_config.hpp
src/cpp/src/visual_language/cdpruner/: cdpruner.cpp  cdpruner.hpp  fast_dpp.cpp  (+6 more)
src/python/: py_generation_config.cpp
src/python/openvino_genai/: py_openvino_genai.pyi
tests/cpp/: logger.cpp  test_cdpruner_dpp.cpp  test_cdpruner_similarity_relevance.cpp
tests/python_tests/: chat_xattention_qwen3_moe.py  test_vlm_pipeline.py  test_xattention_qwen3_moe_cb.py  test_xattention_qwen3_moe_long.py  test_xattention_qwen3_moe_smoke.py
tools/llm_bench/: benchmark.py
tools/llm_bench/llm_bench_utils/: model_utils.py
tools/llm_bench/task/: visual_language_generation.py
(+13 files in other folders)
